[mvn] upgrade aspectj - prepare for java 17