@@ -51,7 +51,7 @@
     <!--  Dependency Versions -->
     <!--  Please maintain a sorted list -->
     <!--  Intellij: Search actions (Press shift twice), type "sort lines", then enter :-) -->
-    <aspectj.version>1.9.6</aspectj.version>
+    <aspectj.version>1.9.9.1</aspectj.version>
     <assertj.version>3.17.2</assertj.version>
     <auto-service.version>1.0.1</auto-service.version>
     <avro.version>1.7.7</avro.version>
@@ -260,6 +260,7 @@
             <argLine>
               -javaagent:"${settings.localRepository}"/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
             </argLine>
+            <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
             <threadCount>1</threadCount>
             <systemPropertyVariables>
               <projectVersion>${project.version}</projectVersion>
